--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
       - /var/transmission/config/:/config
       - /var/transmission/downloads/:/downloads
       - /var/transmission/watch/:/watch
+    restart: on-failure
   st:
     image: linuxserver/syncthing
     ports:
@@ -23,6 +24,7 @@ services:
     volumes:
       - /var/syncthing/config/:/config
       - /var/syncthing/data/:/data
+    restart: on-failure
   st2:
     image: linuxserver/syncthing
     ports:
@@ -32,17 +34,4 @@ services:
     volumes:
       - /var/syncthing2/config/:/config
       - /var/syncthing2/data/:/data
-# failed with Can't create missing temporary directory '/var/run/zm': Permission denied
-#image: quantumobject/docker-zoneminder
-  zm:
-    image: dlandon/zoneminder
-    environment:
-      TZ: "Europe/London"
-      PUID: "99"
-      PGID: "100"
-      SHMEM: "50%"
-    ports:
-      - "8888:80"
-    volumes:
-      - /var/zm/config:/config
-      - /var/zm/data:/var/cache/zoneminder
+    restart: on-failure
